Resolves: tdf#118545 restore to historic logic

revert

commit 9eff9e699e17cc5a8a25895bd28dc8e4ceb8071e
Date:   Wed Aug 10 09:47:40 2016 +0200

    Don't re-check valid SwPageDescs when layouting

and then revert

commit 60d34e1c840d2c317bb7d0a5b14f4602c22b3fcc
Date:   Wed Nov 12 20:33:06 2014 +0000

    coverity#735517 Logically dead code

    its possible that this was the original intent, maybe

Change-Id: Iff45f1e7f3d7e3791d984eb117779a6f39ebb19c
Reviewed-on: https://gerrit.libreoffice.org/57578
Tested-by: Jenkins
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>